--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <main>
+    <main id="main">
         <article>
             <!-- ------------------------------------------  Heading  ------------------------------------------ -->
             <div id="heading">
