I should see an element with a corresponding id=title, which contains a string (i.e. text) that describes the subject of the tribute page.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <article>
             <!-- ------------------------------------------  Heading  ------------------------------------------ -->
             <div id="heading">
-                <h1>Satoshi Nakamoto</h1>
+                <h1 id="title">Satoshi Nakamoto</h1>
                 <p>The mystery of the Bitcoin inventors.</p>
             </div>
             <!-- -------------------------------------------  Figure  ------------------------------------------ -->
