--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <p>The mystery of the Bitcoin inventors.</p>
             </div>
             <!-- -------------------------------------------  Figure  ------------------------------------------ -->
-            <figure class="center">
+            <figure id="img-div" class="center">
                 <img class="center responsive" src="images/vajdahunyadvar-1531470_1280.jpg"
                     alt="Picture of the statue of Anonymus in the City Park in Budapest is representing Satoshi Nakamoto.">
                 <figcaption class="center responsive">Satoshi Nakamoto is the author of the Bitcoin whitepaper published
