Within the img-div element, I should see an img element with a corresponding id=image.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <!-- -------------------------------------------  Figure  ------------------------------------------ -->
             <figure id="img-div" class="center">
-                <img class="center responsive" src="images/vajdahunyadvar-1531470_1280.jpg"
+                <img id="image" class="center responsive" src="images/vajdahunyadvar-1531470_1280.jpg"
                     alt="Picture of the statue of Anonymus in the City Park in Budapest is representing Satoshi Nakamoto.">
                 <figcaption class="center responsive">Satoshi Nakamoto is the author of the Bitcoin whitepaper published
                     2009. He's considered to be the inventor of the blockchain-based cryptocurrency. The general public
