Within the img-div element, I should see an element with a corresponding id=img-caption that contains textual content describing the image shown in img-div.

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <figure id="img-div" class="center">
                 <img id="image" class="center responsive" src="images/vajdahunyadvar-1531470_1280.jpg"
                     alt="Picture of the statue of Anonymus in the City Park in Budapest is representing Satoshi Nakamoto.">
-                <figcaption class="center responsive">Satoshi Nakamoto is the author of the Bitcoin whitepaper published
-                    2009. He's considered to be the inventor of the blockchain-based cryptocurrency. The general public
-                    still doesn't know who that person behind the name is. But presumptions are that it's a group of
-                    people.</figcaption>
+                <figcaption id="img-caption" class="center responsive">Satoshi Nakamoto is the author of the Bitcoin
+                    whitepaper published 2009. He's considered to be the inventor of the blockchain-based
+                    cryptocurrency. The general public still doesn't know who that person behind the name is. But
+                    presumptions are that it's a group of people.</figcaption>
             </figure>
             <!-- --------------------------------------------  Quote  ------------------------------------------ -->
             <div id="quote" class="center responsive">
