I should see an element with a corresponding id=tribute-info, which contains textual content describing the subject of the tribute page.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <!-- ------------------------------------------  Heading  ------------------------------------------ -->
             <div id="heading">
                 <h1 id="title">Satoshi Nakamoto</h1>
-                <p>The mystery of the Bitcoin inventors.</p>
+                <p id="tribute-info">The mystery of the Bitcoin inventors.</p>
             </div>
             <!-- -------------------------------------------  Figure  ------------------------------------------ -->
             <figure id="img-div" class="center">
