I should see an a element with a corresponding id=tribute-link, which links to an outside site that contains additional information about the subject of the tribute page.

--- a/index.html
+++ b/index.html
@@ -46,13 +46,11 @@
                         You've become curious? &#x1F440
                     </p>
                     <p class="normal-text">
-                        </pclass>
-                        Go and check out more on Wikipedia...
+                        Go and check out more on <a id="tribute-link" target="_blank"
+                            href="https://en.wikipedia.org/wiki/Satoshi_Nakamoto"><i
+                                class="fa-brands fa-wikipedia-w"></i>ikipedia</a>
                     </p>
                 </div>
-                <form action="https://en.wikipedia.org/wiki/Satoshi_Nakamoto" method="get" target="_blank">
-                    <button type="submit">Let's go<i class="fa-solid fa-arrow-right"></i></button>
-                </form>
             </div>
         </article>
     </main>
